start stretch goal and fix css

--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,6 @@ nav a{
 }
 nav span{
     border-left:3px solid #626262;
-
 }
 /*Title Section Styles*/
 .title-container{
@@ -145,6 +144,10 @@ button:hover{
         width:100%;
         justify-content: center;
     }
+    nav span{
+        border-left:.2rem solid #626262;
+    }
+
     nav a {
         font-size: 1.5rem;
         padding: 0 2%;
@@ -152,15 +155,23 @@ button:hover{
     
     .title-container div{
         width:100%;
-        height: 40vh;
-        background-size: contain;
+        height: 40rem;
+        background-size: 225%;
     }
+    
     .title-container h1{
-        font-size: 3rem;
+        font-size: 4rem;
+        line-height: 4.5rem;
     }
     button{
         font-size: 1.25rem;
         border-radius: 0%;
+    }
+
+    .title-container hr {
+        width:100%;
+        border: .2rem solid lightgrey;
+        
     }
     .artists-container{
         display: flex;
@@ -170,8 +181,9 @@ button:hover{
         justify-content: center;
     }
     .artists-container img{
-        width: 50%;
+        width: 55%;
         height: 40%;
+        object-fit: contain;
     }
     .artist {
         width:100%; 
@@ -182,7 +194,7 @@ button:hover{
         font-size: 2rem;
     }
     .artist .bio{
-        width:80%;
+        width:70%;
         margin: 3% auto;
         font-size: 1.2rem;
         
